--- a/stylus-aws-management-console.user.css
+++ b/stylus-aws-management-console.user.css
@@ -10,6 +10,6 @@
 
 .slide_image
 {
-    max-width: 2000px !important;
-    max-height: 2000px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
